Fix twitter connect

--- a/app/views/external_authentications/complete_signup.html.erb
+++ b/app/views/external_authentications/complete_signup.html.erb
@@ -6,7 +6,7 @@
   <%= form_for(@user, html: {class: "simple_form"}) do |f| %>
     <p>
       <%= f.label :email %>
-      <%= f.text_field :email, class: 'form-control' %>
+      <%= f.text_field :email, class: 'form-control', autofocus: true %>
     </p>
 
     <%= f.hidden_field :name %>
