Donation tracking form in modal

--- a/app/assets/stylesheets/objects/_modal.scss
+++ b/app/assets/stylesheets/objects/_modal.scss
@@ -634,3 +634,9 @@ xsigin/signup popup
   margin: 3em;
 }
 
+/* Modal: Form track donation */
+#modal-track .cd-user-modal-container {
+  text-align: left;
+  max-width: 825px;
+}
+
