--- a/app/views/shared/_modal_login.html.erb
+++ b/app/views/shared/_modal_login.html.erb
@@ -1,4 +1,6 @@
-<div class="cd-user-modal" <%= %Q{data-error="#{flash[:modal_error]}"}.html_safe if flash[:modal_error] %>> <!-- this is the entire modal form, including the background -->
+
+
+<div id="modal-signin" class="cd-user-modal" <%= %Q{data-error="#{flash[:modal_error]}"}.html_safe if flash[:modal_error] %>> <!-- this is the entire modal form, including the background -->
   <div class="cd-user-modal-container"> <!-- this is the container wrapper -->
     <div class="cd-user-login p4 m4">
 
