--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -706,14 +706,14 @@ iPad 3
   #project .meta { margin-bottom: 5%; }
   #project .actions { padding: 0; }
   #project .meta, #project .actions { float: none; width: auto; }
-  #track_donation {
-    width: 540px;
-    padding: 0; 
-  }
-  #track_donation.content_full {
-    width: 100%;
+  // #track_donation {
+  //   width: 540px;
+  //   padding: 0; 
+  // }
+  // #track_donation.content_full {
+  //   width: 100%;
      
-  }
+  // }
   .main_form {
 
   }
