--- a/app/assets/stylesheets/layout/_donations.scss
+++ b/app/assets/stylesheets/layout/_donations.scss
@@ -12,6 +12,14 @@
   width: 100%;
 }
 
+.donation-project {
+  width: 100%;
+  
+  @include min-screen(740) { 
+    width: 40%; 
+  }
+}
+
 .donation-amount {
   width: 80px;
 }
