--- a/app/assets/stylesheets/objects/_content.scss
+++ b/app/assets/stylesheets/objects/_content.scss
@@ -13,11 +13,17 @@ This object is the column holding the content of the page. There are a few flavo
 }
 
 .content-big {
-  width: 710px;
+  box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 5%;
+  padding-right: 5%;
+
+  @include min-screen(880) { 
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 710px; 
+  }
 }
 
 .content-medium {
