Fixing errors for forms

--- a/app/views/shared/_modal_form_donation.html.erb
+++ b/app/views/shared/_modal_form_donation.html.erb
@@ -4,7 +4,7 @@
       <div class="p4 m4">
 
         <h3>TrackDon</h3>
-        <%= modal_flash_message(:login) %>
+        <%= modal_flash_message(:donation) %>
         <%= render 'donations/form' %>
       </div>
     </div>
