Leaving the social login buttons always visible

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -93,7 +93,7 @@
         <li><%= t 'main_bullet_3' %></li>
       </ul>
       <%# link_to t('home.read_more_about_this_project'), about_path, class: 'button' %>
-      <%= link_to t('shared.user_links.track_your_first_donation'), '', :class => 'cd-signin btn mt3' %>
+      <%= link_to t('shared.user_links.track_your_first_donation'), '', :class => 'cd-signup btn mt3' %>
     </section>
 
   </div>
