--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -179,6 +179,10 @@ form.simple_form input[type='submit'] { width: 40%;}
 
 .alert { background: #EBE8CC; padding-top: 1em; padding-bottom: 1em; margin-bottom: 2em; }
 .success, .info, .warning, .danger { }
+#main_content > .alert {
+  padding-left: 5%;
+  padding-right: 5%;
+}
 
 /* rails */
 .field_with_errors { border: 1px solid red;}
