--- a/app/views/shared/_modal_form_donation.html.erb
+++ b/app/views/shared/_modal_form_donation.html.erb
@@ -1,7 +1,7 @@
-  
+
   <div id="modal-track" class="cd-user-modal" <%= %Q{data-error="#{flash[:modal_error]}"}.html_safe if flash[:modal_error] %>>
     <div class="cd-user-modal-container">
-      <div class="p4 m4">
+      <div class="cd-user-modal-content">
 
         <h3>TrackDon</h3>
         <%= modal_flash_message(:donation) %>
