--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -274,7 +274,6 @@ h2 { font-size: 24px; }
 #project { overflow: hidden; }
 #project .meta { width: 42%; float: left; padding: 2% 4%; font-size: 12px; }
 #project .actions { width: 42%; float: right; padding: 0 4%; }
-#project h1 { font-size: 32px; margin: 10px 0;}
 #project .description { margin: 0 0 40px 0; font-size: 12px }
 #project .meta ul { margin: 0; padding: 0; ;}
 #project .meta li { list-style-type: none; margin: 0 0 10px 0;}
@@ -306,11 +305,18 @@ body.projects_index {
     position: relative;
     padding-right: 300px;
     padding-top: .5em;
+    @include screen(768) {
+      padding-right: 0;
+    }
 
     h1 {
       font-size: 1.6em;
       display: inline;
       padding-right: .5em;
+      @include screen(768) {
+        font-size: 1.3em;
+        padding: 0;
+      }
       
     }
 
@@ -331,6 +337,15 @@ body.projects_index {
 
       a {
         margin-left: 1em;
+        @include screen(768) {
+          width: 100%;
+          font-size: 1.3em;
+          margin: 0 0 1em 0;
+        }
+      }
+
+      @include screen(768) {
+        position: relative;
       }
     }
 
@@ -420,7 +435,7 @@ body.projects_index {
     color: $secondary_color;
     font-size: 1em;
     color: #666; 
-    margin: 0 10px 10px 0;
+    margin: 0 10px 10px 43px;
     border: none;
 
     .date {
@@ -617,8 +632,14 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
 }
 .user_page {
 
-  header { padding: 20px; position: relative;}
-  header h1 { font-size: 28px; margin: 0 0 0 72px; }
+  header { 
+    position: relative;
+    height: 72px;
+  }
+  header h1 { 
+    font-size: 1.6em; 
+    margin: 0 0 0 90px; 
+  }
   header img { vertical-align: middle; position: absolute; top: 0; left: 0; }
 
   h2 {
