--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -43,16 +43,12 @@
               <div class="field-select field-group-item">
                 <select class="js-donation-reurring" name="donation[recurring]" value="<%= f.object.recurring %>" id="donation_recurring">
                   <option value="no" selected="selected">No</option>
-                  <option value="daily"><%= t('.daily') %></option>
-                  <option value="weekly"><%= t('.weekly') %></option>
-                  <option value="2 weeks"><%= t('.weeks', n: 2) %></option>
-                  <option value="3 weeks"><%= t('.weeks', n: 3) %></option>
                   <option value="monthly"><%= t('.monthly') %></option>
                   <option value="2 months"><%= t('.months', n: 2) %></option>
                   <option value="3 months"><%= t('.months', n: 3) %></option>
                   <option value="4 months"><%= t('.months', n: 4) %></option>
                   <option value="6 months"><%= t('.months', n: 6) %></option>
-                  <option value="12 months"><%= t('.months', n: 12) %></option>
+                  <option value="1 year"><%= t('.yearly') %></option>
                 </select>
               </div>
             </div>
