--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -25,10 +25,10 @@
 
     <ul id="share_buttons">
       <li>
-        <%= link_to t('donations.show.share_in_twitter'), "https://twitter.com/home?status=#{u t('donations.show.share_tweet', :url => donation_url(@donation))}", { :class => 'button popup' } %>
+        <%= link_to t('donations.show.share_in_twitter'), "https://twitter.com/home?status=#{u t('donations.show.share_tweet', :url => donation_url(@donation), :project => @donation.project.name)}", { :class => 'button popup' } %>
       </li>
       <li>
-        <%= link_to t('donations.show.share_in_facebook'), "http://www.facebook.com/sharer/sharer.php?u=#{u donation_url(@donation)}", {:class => 'button popup' } %>
+        <%= link_to t('donations.show.share_in_facebook'), "http://www.facebook.com/sharer/sharer.php?u=#{u donation_url(@donation)}&t=#{u t('donations.show.share_tweet', :url => donation_url(@donation), :project => @donation.project.name)}", {:class => 'button popup' } %>
       </li>
       <li>
         <%= link_to t('donations.show.share_by_email'), 
