From public donaiton page for non-logged users, launch signup modal

--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -8,7 +8,7 @@
     <p><big><%= t('.user_is_using', :name => @donation.user.name) %></big></p>
     <p>
       <%= t '.in_which_projects' %>
-      <%= link_to t('.create_your_own'), root_path, :class => "button ml0 mt3" %>      
+      <%= link_to t('.create_your_own'), root_path, :class => "cd-signup button ml0 mt3" %>      
     </p>
 
   </section>
