User header; closes #117

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,6 +72,7 @@
 
  @import "layout/donations";
  @import "layout/home-newcomers";
+ @import "layout/user-profile";
 
 /* 
  * 6. Vendors
@@ -279,8 +280,18 @@ h2 { font-size: 24px; }
 #project .meta li { list-style-type: none; margin: 0 0 10px 0;}
 #project .actions div { margin: 0 0 10px 0;}
 #project .actions p { margin: 0;}
-#project .links { margin: 0 0 20px 0;}
-#project .links div { display: inline-block; padding: 0 10px 0 0;}
+
+.links { margin: 0 0 20px 0;}
+.links div { display: inline-block; padding: 0 10px 0 0;}
+.links {
+  display: inline-block;
+
+  div {
+    display: inline-block;
+    padding-right: 1em;
+  }
+}
+
 .project_main { clear: both; overflow: auto; }
 
 .project a { width: 120px; margin: 0 10px 10px 0; float: left; padding: 5px; height: 60px; text-align: bottom; border: 1px solid #CDD195; }
@@ -318,15 +329,6 @@ body.projects_index {
         padding: 0;
       }
       
-    }
-
-    .links {
-      display: inline-block;
-
-      div {
-        display: inline-block;
-        padding-right: 1em;
-      }
     }
 
     .action_buttons {
@@ -621,45 +623,6 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
 
 .long_text { width: 500px; font-size: 14px; }
 .long_text p, .long_text ul, .long_text li { line-height: 22px; }
-
-#user_donations {
-  position: relative;
-  #donations_chart { 
-    position: absolute; 
-    top: 6px; 
-    right: 20px;
-  }
-}
-.user_page {
-
-  header { 
-    position: relative;
-    height: 72px;
-  }
-  header h1 { 
-    font-size: 1.6em; 
-    margin: 0 0 0 90px; 
-  }
-  header img { vertical-align: middle; position: absolute; top: 0; left: 0; }
-
-  h2 {
-    color: $main-color;
-    border-bottom: 2px solid $main-color;
-    border-top: none;
-    padding: 0 0 .15em 0;
-    font-size: 1.1em;
-  }
-    
-}
-#donations_last_month { position: absolute; top: 25px; left: 450px; }
-#donations_last_month small { display: block}
-#donations_overall { position: absolute; top: 25px; left: 600px; }
-#donations_last_month, #donations_overall { font-size: 14px; }
-#user_nav { 
-  margin: 20px 0;
-  overflow: hidden;
-}
-#edit_your_profile { float: right; }
 
 .ui-autocomplete { border: 1px solid red; }
 
