Track donation link in header links goes to home and open modal, to avoid opening the modal if you are in a project page, where you would only be able to track a donation for that project

--- a/app/views/shared/_user_links.html.erb
+++ b/app/views/shared/_user_links.html.erb
@@ -1,6 +1,6 @@
 <% if logged_in? %>
   <li><%= link_to t('.hello', name: current_user.name), current_user %></li>
-  <li><%= link_to t('track_donation'), track_donation_path, class: 'modal-track-open' %></li>
+  <li><%= link_to t('track_donation'), root_path+'#modal-track' %></li>
   <li><%= link_to t('users.invite'), invite_path %></li>
   <li><%= link_to t('.log_out'), logout_path, method: "delete" %></li>
 <% else %>
