--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,7 +11,7 @@
     <div class="question"><%= t('home.have_you_donated_sometime') %></div>
 
     <div class="buttons">
-      <%= link_to t('no'), '', class: 'btn-no btn mr3' %>
+      <%= link_to t('home.not_yet'), '', class: 'btn-no btn mr3' %>
       <%= link_to t('home.yes_of_course'), '', class: 'btn-yes btn' %>
     </div>
 
@@ -36,7 +36,7 @@
     <div class="question"><%= t('home.would_you_like_to_recruit_more_support') %></div>
 
     <div class="buttons">
-      <%= link_to t('no'), '', class: 'btn-no btn mr3' %>
+      <%= link_to t('home.not_yet'), '', class: 'btn-no btn mr3' %>
       <%= link_to t('home.yes_of_course'), '', class: 'btn-yes btn' %>
     </div>
 
@@ -61,7 +61,7 @@
     <div class="question"><%= t('home.do_you_fancy_creating_your_public_trackdon') %></div>
 
     <div class="buttons">
-      <%= link_to t('no'), '', class: 'btn-no btn mr3' %>
+      <%= link_to t('home.not_yet'), '', class: 'btn-no btn mr3' %>
       <%= link_to t('home.yes_of_course'), '', class: 'btn-yes btn' %>
     </div>
 
