Fix donation edit link

--- a/app/assets/javascripts/templates/donation.jst.ejs
+++ b/app/assets/javascripts/templates/donation.jst.ejs
@@ -31,7 +31,7 @@
       </div>
       <div class="form-fields">
         <div class="field-select field-group-item">
-          <select class="js-donation-reurring" name="donation[recurring]">
+          <select class="js-donation-recurring" name="donation[recurring]">
             <option value="no" selected="selected">No</option>
             <option value="daily">Daily</option>
             <option value="weekly">Weekly</option>
