--- a/app/views/donations/edit.html.erb
+++ b/app/views/donations/edit.html.erb
@@ -1,5 +1,5 @@
+<div class="content-big">
+  <h3 class="main-color"><%= title(t('donations.form.edit_your_donation', name: @donation.project.name)) %></h3>
 
-  <div class="content-big">
-    <h3 class="main-color"><%= title(t('donations.form.edit_your_donation', name: @donation.project.name)) %></h3>
-    <%= render 'donations/form' %>
-  </div>
+  <%= render 'form' %>
+</div>
