Showing an icon instead of text to cue recurring donation

--- a/app/assets/stylesheets/layout/_donations.scss
+++ b/app/assets/stylesheets/layout/_donations.scss
@@ -69,6 +69,7 @@
     .date {
       opacity: .5;
       font-weight: normal;
+      padding: 0 .4em 0 0;
     }
   }
   p.donation_date { color: #AFACA4; }
