Adding Clicky stats

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,6 +99,10 @@
 <%= debug(params) if Rails.env.development? %>
 <%= debug(cookies) if Rails.env.development? %>
 
+<a title="Web Analytics" href="http://clicky.com/100833841"><img alt="Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(100833841); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100833841ns.gif" /></p></noscript>
 
 </body>
 </html>
