--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -4,8 +4,28 @@
 
   <h1><%= title t('metas.donations.home.title') %></h1>
 
+  <% if logged_in? %>
+    <% if @donations_from_everybody %>
+      <% if current_user.external_service_connected? %>
+        <%= render 'post_in_social_networks' %>
+
+        <p><%= t('.donations_everybody') %></p>
+      <% else %>
+        <%= render 'connect_with_friends' %>
+      <% end %>
+    <% end %>
+  <% end %>
+
   <% @donations.each do |donation| %>
     <%= render partial: 'donation', locals: {donation: donation} %>
+  <% end %>
+
+  <% if @featured_donations.any? %>
+    <h2><%= t('.featured_donations') %></h2>
+
+    <% @featured_donations.each do |donation| %>
+      <%= render partial: 'donation', locals: {donation: donation} %>
+    <% end %>
   <% end %>
 
 </section>
