--- a/app/assets/stylesheets/objects/_buttons.scss
+++ b/app/assets/stylesheets/objects/_buttons.scss
@@ -48,3 +48,8 @@ a.btn.not_active:hover {
     border: none;
   }
 }
+.notice-box {
+  border-radius: 4px;
+  background: $light_background;
+  font-size: .85em;
+}
