--- a/app/views/donations/_post_in_social_networks.html.erb
+++ b/app/views/donations/_post_in_social_networks.html.erb
@@ -1,8 +1,8 @@
-<div>
+<div class="notice-box px4 py1">
   <p><%= t('.no_friends_activity') %></p>
 
-  <div class="social-login mt4 mb4 clearfix">
-    <%= link_to(t('.twitter'), 'https://twitter.com', class: "btn float-left") %>
-    <%= link_to(t('.facebook'), 'https://facebook.com', class: "btn float-right") %>
+  <div class="social-login mt2 mb3 clearfix">
+    <%= link_to(t('.twitter'), 'https://twitter.com', class: "btn mr2 ") %>
+    <%= link_to(t('.facebook'), 'https://facebook.com', class: "btn ") %>
   </div>
 </div>
