--- a/app/views/donations/_connect_with_friends.html.erb
+++ b/app/views/donations/_connect_with_friends.html.erb
@@ -1,9 +1,9 @@
-<div>
+<div class="notice-box px4 py1">
   <p><%= t('.connect_with_facebook_and_twitter') %></p>
   <p><%= t('.never_publish') %></p>
 
-  <div class="social-login mt4 mb4 clearfix">
-    <%= link_to(t('.twitter'), '/auth/twitter', class: "btn float-left") %>
-    <%= link_to(t('.facebook'), '/auth/facebook', class: "btn float-right") %>
+  <div class="social-login mt2 mb3 clearfix">
+    <%= link_to(t('.twitter'), '/auth/twitter', class: "btn mr2") %>
+    <%= link_to(t('.facebook'), '/auth/facebook', class: "btn ") %>
   </div>
 </div>
